@@ -125,6 +125,7 @@ echo '### Loading 100/div3.ml'; echo 'loadt "100/div3.ml";;' | (time $hollight)
 echo '### Loading 100/divharmonic.ml'; echo 'loadt "100/divharmonic.ml";;' | (time $hollight)
 echo '### Loading 100/e_is_transcendental.ml'; echo 'loadt "100/e_is_transcendental.ml";;' | (time $hollight)
 echo '### Loading 100/euler.ml'; echo 'loadt "100/euler.ml";;' | (time $hollight)
+echo '### Loading 100/feuerbach.ml'; echo 'loadt "100/feuerbach.ml";;' | (time $hollight)
 echo '### Loading 100/fourier.ml'; echo 'loadt "100/fourier.ml";;' | (time $hollight)
 echo '### Loading 100/four_squares.ml'; echo 'loadt "100/four_squares.ml";;' | (time $hollight)
 echo '### Loading 100/friendship.ml'; echo 'loadt "100/friendship.ml";;' | (time $hollight)
